Work View Spacing Fix

--- a/css/style.css
+++ b/css/style.css
@@ -955,8 +955,7 @@ body {
     --row3: 1fr;
     grid-template-columns: 1fr;
     column-gap: 0;
-    row-gap: 10px;
-    row-gap: 15px;
+    row-gap: 0px;
     /* padding-bottom: 20px; */
   }
   .about {
